--- a/lab/media-player-lock-screen.html
+++ b/lab/media-player-lock-screen.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             --widget-width: 20rem;
-            --widget-height: 12rem;
+            --widget-height: 9.125rem;
         }
 
         body {
@@ -26,6 +26,7 @@
             gap: 0.5rem;
             padding: .5rem;
             inline-size: var(--widget-width);
+            block-size: var(--widget-height);
             background: linear-gradient(oklch(from #2a2a2a l c h / 0.8), oklch(from #2a2a2a l c h / 0.8)), var(--bg-image, none);
             background-size: cover;
             background-position: center;
@@ -55,12 +56,14 @@
 
         /* Row 2 Content */
         .media-player__meta {
-            grid-column: 1 / 5;
+            grid-column: 1 / 8;
             display: flex;
             flex-direction: column;
             justify-content: center;
             gap: 0.125rem;
             padding-inline-start: 0.25rem;
+            min-inline-size: 0;
+            /* Important for truncation */
         }
 
         .media-player__play-pause {
@@ -142,6 +145,7 @@
         .media-player__meta__album {
             font-size: 0.65rem;
             color: #777;
+
         }
 
         /* Slider Stylings */
@@ -317,12 +321,12 @@
             isLiked = !isLiked;
             const path = likeBtn.querySelector('svg path');
             path.setAttribute('d', isLiked ? SVG_PATHS.LIKE_FILLED : SVG_PATHS.LIKE);
-            likeBtn.style.color = isLiked ? '#007bff' : 'white';
+            likeBtn.style.color = isLiked ? 'oklch(from #007bff l c h / .8)' : 'white';
         });
 
         randomBtn.addEventListener('click', () => {
             isRandom = !isRandom;
-            randomBtn.style.color = isRandom ? '#007bff' : 'white';
+            randomBtn.style.color = isRandom ? 'oklch(from #007bff l c h / .8)' : 'white';
             if (isRandom) core.shuffle();
         });
 
