--- a/lab/media-player-lock-screen.html
+++ b/lab/media-player-lock-screen.html
@@ -9,15 +9,7 @@
     <style>
         :root {
             --widget-width: 20rem;
-<<<<<<< HEAD
-<<<<<<< HEAD
-            --widget-height: 9.125rem;
-=======
-            --widget-height: 12rem;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
-            --widget-height: 9.125rem;
->>>>>>> 337e516 (set fixed height on container)
+            --widget-height: 9.4rem;
         }
 
         body {
@@ -29,9 +21,9 @@
         }
 
         .media-player-grid {
-<<<<<<< HEAD
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
             gap: 0.5rem;
             padding: .5rem;
             inline-size: var(--widget-width);
@@ -39,20 +31,10 @@
             background: linear-gradient(oklch(from #2a2a2a l c h / 0.8), oklch(from #2a2a2a l c h / 0.8)), var(--bg-image, none);
             background-size: cover;
             background-position: center;
-=======
-            display: grid;
-            grid-template-rows: repeat(3, 1fr);
-            grid-template-columns: repeat(5, 1fr);
-            gap: 0.75rem;
-            padding: 1rem;
-            inline-size: var(--widget-width);
-            background: oklch(from #2a2a2a l c h / 0.9);
->>>>>>> 4a7a438 (init -> media player lock scrreen)
             backdrop-filter: blur(10px);
             border-radius: 1.5rem;
             border: 1px solid oklch(from #444 l c h / 0.5);
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
-<<<<<<< HEAD
             transition: background-image 0.5s ease-in-out;
         }
 
@@ -64,87 +46,57 @@
             align-items: center;
         }
 
-        /* Row 1 Content */
-        .grid-item--yt {
-=======
+        .media-player-grid__row:nth-child(2) {
+            margin-block-start: 0.5rem;
         }
 
-        /* Row 1: YouTube Music & This Phone */
         .grid-item--yt {
-            grid-row: 1;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
             grid-column: 1;
         }
 
         .grid-item--phone {
-<<<<<<< HEAD
             grid-column: 8;
         }
 
-        /* Row 2 Content */
         .media-player__meta {
             grid-column: 1 / 8;
-<<<<<<< HEAD
-=======
-            grid-row: 1;
-            grid-column: 5;
-        }
-
-        /* Row 2: Meta Data & Play/Pause */
-        .media-player__meta {
-            grid-row: 2;
-            grid-column: 1 / 5;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
->>>>>>> 337e516 (set fixed height on container)
             display: flex;
             flex-direction: column;
             justify-content: center;
             gap: 0.125rem;
             padding-inline-start: 0.25rem;
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 337e516 (set fixed height on container)
             min-inline-size: 0;
-            /* Important for truncation */
         }
 
         .media-player__play-pause {
             grid-column: 8;
+            inline-size: 2.5rem !important;
+            block-size: 2rem !important;
+            border-radius: .75rem !important;
+            transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) !important;
         }
 
-        /* Row 3 Content */
+        .media-player__play-pause svg {
+            inline-size: 24px !important;
+            block-size: 24px !important;
+        }
+
+        .media-player__play-pause:active {
+            transform: scale(1.1);
+        }
+
         .media-player__prev {
-=======
-        }
-
-        .media-player__play-pause {
-            grid-row: 2;
-            grid-column: 5;
-        }
-
-        /* Row 3: Prev, Slider, Forward, Like, Random */
-        .media-player__prev {
-            grid-row: 3;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
             grid-column: 1;
         }
 
         .media-player__progress {
-<<<<<<< HEAD
             grid-column: 2 / 6;
-=======
-            grid-row: 3;
-            grid-column: 2;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
         .media-player__next {
-<<<<<<< HEAD
             grid-column: 6;
         }
 
@@ -154,29 +106,10 @@
 
         .media-player__random {
             grid-column: 8;
-=======
-            grid-row: 3;
-            grid-column: 3;
         }
 
-        .media-player__like {
-            grid-row: 3;
-            grid-column: 4;
-        }
-
-        .media-player__random {
-            grid-row: 3;
-            grid-column: 5;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-        }
-
-        /* Custom Styles for Icons/Buttons */
         .media-player-grid button {
-<<<<<<< HEAD
             background: transparent;
-=======
-            background: oklch(from #333 l c h);
->>>>>>> 4a7a438 (init -> media player lock scrreen)
             border: none;
             border-radius: 0.75rem;
             color: white;
@@ -186,104 +119,54 @@
             justify-content: center;
             cursor: pointer;
             transition: all 0.2s ease;
-<<<<<<< HEAD
             inline-size: 2rem;
             block-size: 2rem;
             aspect-ratio: 1;
         }
 
-<<<<<<< HEAD
         .media-player-grid .themed-background {
             background: var(--themed-background, oklch(from #007bff l c h));
             border-radius: 1rem;
             transition: background-color 0.5s ease;
         }
 
-        /* Specialized sizing for Row 1 items */
         .grid-item--yt,
         .grid-item--phone {
-            inline-size: 2rem !important;
-            block-size: 2rem !important;
+            inline-size: 1.5rem !important;
+            block-size: 1.5rem !important;
+            padding: initial !important;
         }
 
         .grid-item--yt svg,
         .grid-item--phone svg {
-            inline-size: 22px;
-            block-size: 22px;
-=======
-            inline-size: 100%;
-            block-size: 100%;
-            aspect-ratio: 1;
+            inline-size: 16px;
+            block-size: 16px;
         }
 
-        .media-player-grid button:hover {
-            background: oklch(from #444 l c h);
-            transform: translateY(-1px);
-        }
-
-        .media-player-grid button:active {
-            transform: translateY(0);
-        }
-
-=======
->>>>>>> 4f99bf3 (change lider thumb, row1 & play buttons get accent color from album art)
-        .media-player-grid .themed-background {
-            background: var(--themed-background, oklch(from #007bff l c h));
-            border-radius: 1rem;
-            transition: background-color 0.5s ease;
-        }
-
-<<<<<<< HEAD
-        .media-player-grid .themed-background:hover {
-            background: oklch(from #0056b3 l c h);
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
-        /* Specialized sizing for Row 1 items */
-        .grid-item--yt,
-        .grid-item--phone {
-            inline-size: 2rem !important;
-            block-size: 2rem !important;
-        }
-
-        .grid-item--yt svg,
-        .grid-item--phone svg {
-            inline-size: 22px;
-            block-size: 22px;
->>>>>>> 4f99bf3 (change lider thumb, row1 & play buttons get accent color from album art)
-        }
-
-        /* Meta Styles */
         .media-player__meta__title {
             font-size: 0.875rem;
             font-weight: 600;
             color: #fff;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .media-player__meta__artist {
             font-size: 0.75rem;
             color: #aaa;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
-        .media-player__meta__album {
-            font-size: 0.65rem;
-            color: #777;
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 337e516 (set fixed height on container)
-
-        }
-
-        /* Slider Stylings */
         .progress-slider {
             -webkit-appearance: none;
             width: 100%;
             background: transparent;
-            /* Element background should be transparent */
             outline: none;
             cursor: pointer;
             height: 16px;
-            /* Total height matches thumb height */
             display: flex;
             align-items: center;
         }
@@ -294,77 +177,23 @@
             background: #444;
             border-radius: 2px;
             border: none;
-=======
-        }
-
-        /* Slider Stylings */
-        .progress-slider {
-            -webkit-appearance: none;
-            width: 100%;
-            background: transparent;
-            /* Element background should be transparent */
-            outline: none;
-            cursor: pointer;
-            height: 16px;
-            /* Total height matches thumb height */
-            display: flex;
-            align-items: center;
-        }
-
-        .progress-slider::-webkit-slider-runnable-track {
-            width: 100%;
-            height: 4px;
-            background: #444;
-            border-radius: 2px;
-<<<<<<< HEAD
-            outline: none;
-            cursor: pointer;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
-            border: none;
->>>>>>> 4f99bf3 (change lider thumb, row1 & play buttons get accent color from album art)
         }
 
         .progress-slider::-webkit-slider-thumb {
             -webkit-appearance: none;
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 4f99bf3 (change lider thumb, row1 & play buttons get accent color from album art)
             width: 4px;
             height: 16px;
             background: oklch(from #fff l c h / 0.8);
             border-radius: 2px;
-<<<<<<< HEAD
             cursor: pointer;
             margin-top: -6px;
             /* (4px track / 2) - (16px thumb / 2) = -6 */
             border: none;
-=======
-            width: 12px;
-            height: 12px;
-            background: #007bff;
-            border-radius: 50%;
-            cursor: pointer;
-            box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
-            cursor: pointer;
-            margin-top: -6px;
-            /* (4px track / 2) - (16px thumb / 2) = -6 */
-            border: none;
->>>>>>> 4f99bf3 (change lider thumb, row1 & play buttons get accent color from album art)
         }
 
-        /* SVG Sizing */
         svg {
-<<<<<<< HEAD
             inline-size: 20px;
             block-size: 20px;
-=======
-            inline-size: 24px;
-            block-size: 24px;
->>>>>>> 4a7a438 (init -> media player lock scrreen)
             fill: currentColor;
         }
 
@@ -377,8 +206,6 @@
 <body>
 
     <section class="media-player-grid">
-        <!-- Row 1 -->
-<<<<<<< HEAD
         <article class="media-player-grid__row">
             <button class="grid-item--yt icon-btn--brand themed-background" title="YouTube Music">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -393,13 +220,10 @@
                 </svg>
             </button>
         </article>
-
-        <!-- Row 2 -->
         <article class="media-player-grid__row">
             <div class="media-player__meta">
                 <div class="media-player__meta__title">Loading...</div>
                 <div class="media-player__meta__artist">...</div>
-                <div class="media-player__meta__album">...</div>
             </div>
             <button class="media-player__play-pause themed-background" title="Play">
                 <svg viewBox="0 -960 960 960">
@@ -407,8 +231,6 @@
                 </svg>
             </button>
         </article>
-
-        <!-- Row 3 -->
         <article class="media-player-grid__row">
             <button class="media-player__prev" title="Previous">
                 <svg viewBox="0 -960 960 960">
@@ -436,59 +258,6 @@
                 </svg>
             </button>
         </article>
-=======
-        <button class="grid-item--yt icon-btn--brand" title="YouTube Music">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-2.5-12.5v9l7.5-4.5-7.5-4.5z" />
-            </svg>
-        </button>
-        <button class="grid-item--phone icon-btn--brand" title="This Phone">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M17 1H7c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 18H7V5h10v14z" />
-            </svg>
-        </button>
-
-        <!-- Row 2 -->
-        <div class="media-player__meta">
-            <div class="media-player__meta__title">Loading...</div>
-            <div class="media-player__meta__artist">...</div>
-            <div class="media-player__meta__album">...</div>
-        </div>
-        <button class="media-player__play-pause" title="Play">
-            <svg viewBox="0 -960 960 960">
-                <path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z" />
-            </svg>
-        </button>
-
-        <!-- Row 3 -->
-        <button class="media-player__prev" title="Previous">
-            <svg viewBox="0 -960 960 960">
-                <path d="M240-240v-480h80v480h-80Zm440 0L400-480l280-240v480Z" />
-            </svg>
-        </button>
-        <div class="media-player__progress">
-            <input type="range" class="progress-slider" min="0" max="100" value="0">
-        </div>
-        <button class="media-player__next" title="Next">
-            <svg viewBox="0 -960 960 960">
-                <path d="M640-240v-480h80v480h-80ZM280-240v-480l280 240-280 240Z" />
-            </svg>
-        </button>
-        <button class="media-player__like" title="Like">
-            <svg viewBox="0 -960 960 960">
-                <path
-                    d="M720-120H280v-520l280-280 50 50q7 7 11.5 19t4.5 23v14l-44 174h258q32 0 56 24t24 56v80q0 7-2 15t-4 15L794-168q-9 20-30 34t-44 14Zm-360-80h360l120-280v-80H480l54-220-174 174v406Zm0-406v406-406Zm-80-34v80H160v360h120v80H80v-520h200Z" />
-            </svg>
-        </button>
-        <button class="media-player__random" title="Random">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.45 20 9.5V4h-5.5zm.59 11.59l-1.41-1.41-1.42 1.41 1.42 1.41 1.41-1.41z" />
-            </svg>
-        </button>
->>>>>>> 4a7a438 (init -> media player lock scrreen)
     </section>
 
     <audio id="audio-player"></audio>
@@ -501,14 +270,9 @@
         const audio = document.getElementById('audio-player');
         const core = new MediaPlayerCore(audio);
 
-<<<<<<< HEAD
         const container = document.querySelector('.media-player-grid');
-=======
-        // Elements
->>>>>>> 4a7a438 (init -> media player lock scrreen)
         const titleEl = document.querySelector('.media-player__meta__title');
         const artistEl = document.querySelector('.media-player__meta__artist');
-        const albumEl = document.querySelector('.media-player__meta__album');
         const playBtn = document.querySelector('.media-player__play-pause');
         const prevBtn = document.querySelector('.media-player__prev');
         const nextBtn = document.querySelector('.media-player__next');
@@ -516,29 +280,19 @@
         const randomBtn = document.querySelector('.media-player__random');
         const slider = document.querySelector('.progress-slider');
 
-        // State
         let isLiked = false;
         let isRandom = false;
 
-        // Subscriptions
         core.subscribe((event, data) => {
             if (event === 'trackChanged') {
                 titleEl.textContent = data.title;
                 artistEl.textContent = data.artist;
-                albumEl.textContent = data.album || 'Unknown Album';
                 slider.value = 0;
-<<<<<<< HEAD
                 UI.updateBackgroundArt(container, data);
                 UI.applyAccentColor(container, data, '--themed-background');
-<<<<<<< HEAD
-=======
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
->>>>>>> 5ae0e95 (modular color extractor funtion)
             }
             if (event === 'play' || event === 'pause') {
-                const iconPath = playBtn.querySelector('svg path');
-                iconPath.setAttribute('d', audio.paused ? SVG_PATHS.PLAY : SVG_PATHS.PAUSE);
+                UI.updatePlayIcon(playBtn, audio.paused);
             }
         });
 
@@ -555,7 +309,6 @@
             audio.currentTime = time;
         });
 
-        // Handlers
         playBtn.addEventListener('click', () => core.togglePlay());
         prevBtn.addEventListener('click', () => core.prev());
         nextBtn.addEventListener('click', () => core.next());
@@ -564,32 +317,15 @@
             isLiked = !isLiked;
             const path = likeBtn.querySelector('svg path');
             path.setAttribute('d', isLiked ? SVG_PATHS.LIKE_FILLED : SVG_PATHS.LIKE);
-<<<<<<< HEAD
-<<<<<<< HEAD
-            likeBtn.style.color = isLiked ? 'oklch(from #007bff l c h / .8)' : 'white';
-=======
-            likeBtn.style.color = isLiked ? '#007bff' : 'white';
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
-            likeBtn.style.color = isLiked ? 'oklch(from #007bff l c h / .8)' : 'white';
->>>>>>> 337e516 (set fixed height on container)
+            likeBtn.style.color = isLiked ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
         });
 
         randomBtn.addEventListener('click', () => {
             isRandom = !isRandom;
-<<<<<<< HEAD
-<<<<<<< HEAD
-            randomBtn.style.color = isRandom ? 'oklch(from #007bff l c h / .8)' : 'white';
-=======
-            randomBtn.style.color = isRandom ? '#007bff' : 'white';
->>>>>>> 4a7a438 (init -> media player lock scrreen)
-=======
-            randomBtn.style.color = isRandom ? 'oklch(from #007bff l c h / .8)' : 'white';
->>>>>>> 337e516 (set fixed height on container)
+            randomBtn.style.color = isRandom ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
             if (isRandom) core.shuffle();
         });
 
-        // Init
         core.loadTrack(0);
     </script>
 </body>
