--- a/lab.html
+++ b/lab.html
@@ -74,43 +74,43 @@
   </header>
   <main id="about" class="lab-container">
     <section class="demo-examples">
-      <article>
+      <article tabindex="0" aria-label="Microsoft Logo Proto">
         <iframe src="/lab/microsoft-logo.html" title="Microsoft Logo Proto" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Headphones Knock">
         <iframe src="/lab/headphones.html" title="Headphones Knock" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Emoji Speaker Animation">
         <iframe src="/lab/emoji-speaker.html" title="Emoji Speaker Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Framer Loaders Animation">
         <iframe src="/lab/framer-loaders.html" title="Framer Loaders Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Google Loader Animation">
         <iframe src="/lab/google-loader.html" title="Google Loader Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Framer Flows Animation">
         <iframe src="/lab/framer-flows.html" title="Framer Flows Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Google Search Loader Animation">
         <iframe src="/lab/google-search-loader.html" title="Google Search Loader Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Framer Logo Animation">
         <iframe src="/lab/framer-logo.html" title="Framer Logo Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Figma Logo Animation">
         <iframe src="/lab/figma-logo.html" title="Figma Logo Animation" loading="lazy"
           style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
-      <article>
+      <article tabindex="0" aria-label="Buttons with Custom Properties Animation">
         <iframe src="/lab/buttons-custom-properties.html" title="Buttons with Custom Properties Animation"
           loading="lazy" style="width: 100%; height: 250px; border: 0; border-radius: 8px; overflow: hidden;"></iframe>
       </article>
