--- a/lab/media-player-lock-screen.html
+++ b/lab/media-player-lock-screen.html
@@ -319,10 +319,10 @@
                     <path d="M640-240v-480h80v480h-80ZM280-240v-480l280 240-280 240Z" />
                 </svg>
             </button>
-            <button class="media-player__like" title="Like">
+            <button class="media-player__rewind" title="Rewind 10s">
                 <svg viewBox="0 -960 960 960">
                     <path
-                        d="M720-120H280v-520l280-280 50 50q7 7 11.5 19t4.5 23v14l-44 174h258q32 0 56 24t24 56v80q0 7-2 15t-4 15L794-168q-9 20-30 34t-44 14Zm-360-80h360l120-280v-80H480l54-220-174 174v406Zm0-406v406-406Zm-80-34v80H160v360h120v80H80v-520h200Z" />
+                        d="M480-80q-75 0-140.5-28.5t-114-77q-48.5-48.5-77-114T120-440h80q0 117 81.5 198.5T480-160q117 0 198.5-81.5T760-440q0-117-81.5-198.5T480-720h-6l62 62-56 58-160-160 160-160 56 58-62 62h6q75 0 140.5 28.5t114 77q48.5 48.5-77 114T840-440q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-80ZM360-320v-180h-60v-60h120v240h-60Zm140 0q-17 0-28.5-11.5T460-360v-160q0-17 11.5-28.5T500-560h80q17 0 28.5 11.5T620-520v160q0 17-11.5 28.5T580-320h-80Zm20-60h40v-120h-40v120Z" />
                 </svg>
             </button>
             <button class="media-player__random" title="Random">
@@ -371,11 +371,10 @@
         const playBtn = document.querySelector('.media-player__play-pause');
         const prevBtn = document.querySelector('.media-player__prev');
         const nextBtn = document.querySelector('.media-player__next');
-        const likeBtn = document.querySelector('.media-player__like');
+        const rewindBtn = document.querySelector('.media-player__rewind');
         const randomBtn = document.querySelector('.media-player__random');
         const slider = document.querySelector('.progress-slider');
 
-        let isLiked = false;
         let isRandom = false;
 
         // Init EQ
@@ -440,11 +439,8 @@
         prevBtn.addEventListener('click', () => core.prev());
         nextBtn.addEventListener('click', () => core.next());
 
-        likeBtn.addEventListener('click', () => {
-            isLiked = !isLiked;
-            const path = likeBtn.querySelector('svg path');
-            path.setAttribute('d', isLiked ? SVG_PATHS.LIKE_FILLED : SVG_PATHS.LIKE);
-            likeBtn.style.color = isLiked ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
+        rewindBtn.addEventListener('click', () => {
+            audio.currentTime = Math.max(0, audio.currentTime - 10);
         });
 
         randomBtn.addEventListener('click', () => {
