--- a/lab/media-player-lock-screen.html
+++ b/lab/media-player-lock-screen.html
@@ -274,6 +274,53 @@
         .icon-btn--brand svg {
             fill: oklch(from #fff l c h / 0.8);
         }
+
+        /* Option Button Special Styles */
+        .media-player__option {
+            position: relative;
+        }
+
+        .media-player__option::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: inherit;
+            border: 2px solid oklch(from #fff l c h / 0.5);
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .media-player__option.animate-outline::after {
+            animation: media-outline-expand 0.32s ease-out forwards;
+        }
+
+        @keyframes media-outline-expand {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(1.6);
+                opacity: 0;
+            }
+        }
+
+        @keyframes media-pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.15);
+            }
+        }
+
+        .pulse {
+            animation: media-pulse 0.3s ease-in-out;
+        }
     </style>
 </head>
 
@@ -325,7 +372,7 @@
                         d="M480-80q-75 0-140.5-28.5t-114-77q-48.5-48.5-77-114T120-440h80q0 117 81.5 198.5T480-160q117 0 198.5-81.5T760-440q0-117-81.5-198.5T480-720h-6l62 62-56 58-160-160 160-160 56 58-62 62h6q75 0 140.5 28.5t114 77q48.5 48.5-77 114T840-440q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-80ZM360-320v-180h-60v-60h120v240h-60Zm140 0q-17 0-28.5-11.5T460-360v-160q0-17 11.5-28.5T500-560h80q17 0 28.5 11.5T620-520v160q0 17-11.5 28.5T580-320h-80Zm20-60h40v-120h-40v120Z" />
                 </svg>
             </button>
-            <button class="media-player__random" title="Random">
+            <button class="media-player__option" title="Random (Mode)">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.45 20 9.5V4h-5.5zm.59 11.59l-1.41-1.41-1.42 1.41 1.42 1.41 1.41-1.41z" />
@@ -372,10 +419,35 @@
         const prevBtn = document.querySelector('.media-player__prev');
         const nextBtn = document.querySelector('.media-player__next');
         const rewindBtn = document.querySelector('.media-player__rewind');
-        const randomBtn = document.querySelector('.media-player__random');
+        const optionBtn = document.querySelector('.media-player__option');
+        const optionSvg = optionBtn.querySelector('svg');
+        const optionPath = optionBtn.querySelector('svg path');
         const slider = document.querySelector('.progress-slider');
 
         let isRandom = false;
+        let likedTracks = new Set(); // Track liked track IDs
+        let currentMode = 'random'; // 'random' or 'like'
+
+        const MODE_ICONS = {
+            random: "M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.45 20 9.5V4h-5.5zm.59 11.59l-1.41-1.41-1.42 1.41 1.42 1.41 1.41-1.41z",
+            like: SVG_PATHS.LIKE,
+            likeFilled: SVG_PATHS.LIKE_FILLED
+        };
+
+        const updateOptionUI = () => {
+            const isLiked = core.currentTrack && likedTracks.has(core.currentTrack.id);
+            if (currentMode === 'random') {
+                optionSvg.setAttribute('viewBox', '0 0 24 24');
+                optionPath.setAttribute('d', MODE_ICONS.random);
+                optionBtn.title = 'Random (Mode)';
+                optionBtn.style.color = isRandom ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
+            } else {
+                optionSvg.setAttribute('viewBox', '0 -960 960 960');
+                optionPath.setAttribute('d', isLiked ? MODE_ICONS.likeFilled : MODE_ICONS.like);
+                optionBtn.title = 'Like (Mode)';
+                optionBtn.style.color = isLiked ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
+            }
+        };
 
         // Init EQ
         EQ_CONFIG.forEach((config, index) => {
@@ -416,6 +488,7 @@
                 slider.value = 0;
                 UI.updateBackgroundArt(container, data);
                 UI.applyAccentColor(container, data, '--themed-background');
+                updateOptionUI();
             }
             if (event === 'play' || event === 'pause') {
                 UI.updatePlayIcon(playBtn, audio.paused);
@@ -443,10 +516,37 @@
             audio.currentTime = Math.max(0, audio.currentTime - 10);
         });
 
-        randomBtn.addEventListener('click', () => {
-            isRandom = !isRandom;
-            randomBtn.style.color = isRandom ? 'oklch(0.6 0.2 260 / 0.8)' : 'white';
-            if (isRandom) core.shuffle();
+        // Option Button Logic
+        let optionTimer;
+        let isLongPress = false;
+
+        optionBtn.addEventListener('mousedown', () => {
+            isLongPress = false;
+            optionTimer = setTimeout(() => {
+                isLongPress = true;
+                currentMode = currentMode === 'random' ? 'like' : 'random';
+                optionBtn.classList.add('animate-outline', 'pulse');
+                if (navigator.vibrate) navigator.vibrate(50);
+                updateOptionUI();
+                setTimeout(() => optionBtn.classList.remove('animate-outline', 'pulse'), 320);
+            }, 500);
+        });
+
+        const cancelOptionPress = () => clearTimeout(optionTimer);
+        ['mouseup', 'mouseleave', 'touchend'].forEach(evt => optionBtn.addEventListener(evt, cancelOptionPress));
+
+        optionBtn.addEventListener('click', () => {
+            if (isLongPress) return;
+            if (currentMode === 'random') {
+                isRandom = !isRandom;
+                if (isRandom) core.shuffle();
+                else core.loadTrack(core.tracks.indexOf(core.currentTrack)); // Reset to linear
+            } else {
+                const trackId = core.currentTrack.id;
+                if (likedTracks.has(trackId)) likedTracks.delete(trackId);
+                else likedTracks.add(trackId);
+            }
+            updateOptionUI();
         });
 
         core.loadTrack(0);
