add marque to meta data

--- a/lab/media-player.html
+++ b/lab/media-player.html
@@ -85,8 +85,8 @@
                 </svg>
             </button>
             <div class="media-player__meta">
-                <div class="media-player__meta__title">Select Track</div>
-                <div class="media-player__meta__artist">...</div>
+                <div class="media-player__meta__title"><span>Select Track</span></div>
+                <div class="media-player__meta__artist"><span>...</span></div>
             </div>
             <button class="media-player__controls__option">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
